# Nrf52-ble-ota-sensor

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  app.overlay  prj.conf
docs/: CODING_RULES.md  PRD.md  SAD.md  SWCDD.md
include/: app_config.h
src/: ble_service.c  ble_service.h  button_handler.c  button_handler.h  led_status.c  led_status.h  main.c  power_mgmt.c  power_mgmt.h  temp_sensor.c  temp_sensor.h
